--- a/src/common/components/layouts/pages/privacyPolicy/PrivacyPolicy.scss
+++ b/src/common/components/layouts/pages/privacyPolicy/PrivacyPolicy.scss
@@ -1,3 +1,13 @@
 .privacy-policy {
   padding: 0 20px;
+
+  a {
+    color: 	#914148;
+    font-weight: 500;
+    text-decoration: none;
+
+    &:hover {
+      color: #673346;
+    }
+  }
 }
