--- a/src/common/components/shared/pageNavigation/PageNavigation.scss
+++ b/src/common/components/shared/pageNavigation/PageNavigation.scss
@@ -14,13 +14,6 @@
       color: inherit;
       display: flex;
     }
-
-    button {
-      @media (max-width: 623px) {
-        max-width: min-content;
-        padding: 6px 24px;
-      }
-    }
   }
 }
 
@@ -39,14 +32,6 @@
       margin: 0;
       color: rgba(0, 0, 0, 0.75);
       letter-spacing: 0.00938em;
-    }
-
-    button {
-      margin: 20px 0 0 0;
-
-      @media (max-width: 623px) {
-        padding: 18px 24px;
-      }
     }
 
     .app-link {
@@ -72,6 +57,20 @@
       button {
         margin: 40px 0 0 0;
       }
+    }
+  }
+}
+
+.page-navigation, .page-navigation-text {
+  button {
+    min-height: 40px;
+    padding: 7px 21px;
+
+    @media (max-width: $break-point) {
+      max-width: min-content;
+      min-height: 70px;
+      padding: 8px 24px;
+      line-height: 1.25;
     }
   }
 }
