--- a/src/common/components/layouts/pages/results/summary/Summary.scss
+++ b/src/common/components/layouts/pages/results/summary/Summary.scss
@@ -11,15 +11,10 @@
     margin-bottom: 0;
   }
 
-  &__chart {
+  &__list {
     @include centered-column;
-    position: relative;
-    height: 300px;
-
-    // Remove chart tooltip flickering
-    svg > g > g:last-child {
-      pointer-events: none
-    }
+    margin: 50px auto;
+    min-width: fit-content;
   }
 
   &__compliance {
@@ -64,6 +59,55 @@
       }
     }
   }
+
+  .list {
+    list-style: none;
+    padding: 0;
+    columns: 2;
+    margin: 0 20px;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+
+    &-item {
+      margin: 0 10px;
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      margin-bottom: 9px;
+
+      .list-item__icon {
+        font-size: 16px;
+        margin-right: 5px;
+      }
+
+      &_passed {
+        .list-item__icon, span {
+          color: $color-success;
+        }
+      }
+      &_failed {
+        .list-item__icon, span {
+          color: $color-error;
+        }
+      }
+
+      span {
+        padding-left: 5px;
+        font-weight: 400
+      }
+    }
+
+    @media screen and (max-width: 490px) {
+      columns: 1;
+      -webkit-columns: 1;
+      -moz-columns: 1;
+    }
+
+    @media screen and (max-width: 290px) {
+      margin: 0;
+    }
+  }
+
 
   .error-section {
     @include centered-column;
