Fix styles for modal

--- a/src/common/components/shared/dialog/Dialog.scss
+++ b/src/common/components/shared/dialog/Dialog.scss
@@ -22,11 +22,19 @@
 
 .dialog-title {
   & > .MuiTypography-h6 {
-    padding-left: 5px;
+    padding-right: 20px;
   }
 }
 
 .dialog .MuiSvgIcon-root.close-icon {
   width: 20px;
   height: 20px;
+}
+
+.dialog-content-main.MuiDialogContent-root  {
+  padding-bottom: 0;
+}
+
+.dialog-content-footer.MuiDialogContent-root  {
+  padding: 0 24px 16px 24px;
 }
